--- a/email-form.html
+++ b/email-form.html
@@ -32,7 +32,7 @@
 		       <li><a href="index.html">Home</a></li>
                <li><a href="articles.html">Articles</a></li>
                <li><a href="resources.html">Game Resources</a></li>		
-               <li><a href="contact">Contact</a></li>
+               <li><a href="contact.html">Contact</a></li>
             </ul>    
 		 </nav>
 	  </div>
