--- a/resources.html
+++ b/resources.html
@@ -43,7 +43,7 @@
 	        <article>
 		       <h2 id="contentstart">Game Resources</h2>
 			   <section>
-                  <h3><a href="">Final Fantasy XIV</a></h3>
+				   <h3><div class="dummylink"><a href="">Final Fantasy XIV</a></div></p></h3>
 			      <p>Game-specific information for the popular subscription-based MMO, Final Fatansy XIV, with links to job guides, raid information, community resources and more.</p>
 				  <figure class="video">
 				     <iframe width="420" height="237" src="https://www.youtube.com/embed/0fS-FVrY74Y" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -51,7 +51,7 @@
 				  </figure>
 			   </section>
 			   <section>
-                  <h3><a href="">Counter-Strike: Global Offensive</a></h3>
+				   <h3><div class="dummylink"><a href="">Counter-Strike: Global Offensive</a></div></h3>
 			      <p>Game-specific information for the popular first-person-shooter, Counter-Strike: Global Offensive, with links to weapon information, map guides, tactics, strategies, community resources and more.</p>
 			   </section>
 		    </article>
