--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,11 @@
 			      <p>A secure webform for submitting feedback or inquiries directly to the webmaster's inbox.</p>
 			   </section>
 			   <section>
-                  <h3><a href="">Tweet</a></h3> <!-- Social media implementation to be added when social media accounts are actually created -->
+                   <h3><div class="dummylink"><a href="">Tweet</a></div></h3> <!-- Social media implementation to be added when social media accounts are actually created -->
 			      <p>Tweet directly at the webmaster. Dank memes will be retweeted, obviously.</p>      
 			   </section>
                <section>
-                   <h3><a href="">Discord</a></h3>
+                   <h3><div class="dummylink"><a href="">Discord</a></div></h3>
                    <p>An invite link to the Discord community surrounding this website, which you can also use to get in touch with the websmaster or various other people affiliated with Victory Through Leadership.</p>
                </section>    
 		    </article>
